# indream-client-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
openapi/: openapi.yaml
openapi/examples/: editor-state.invalid.caption-offset.json  editor-state.invalid.caption.json  editor-state.invalid.chart.json  editor-state.invalid.deleted-asset.json  editor-state.invalid.effect.json  editor-state.invalid.filter.json  editor-state.invalid.text-template.json  editor-state.invalid.transition.json  editor-state.valid.caption-offset.json  editor-state.valid.caption.json  editor-state.valid.chart.json  editor-state.valid.json  editor-state.valid.runtime.json  editor-state.valid.text-template.json
openapi/schemas/: editor-state.v1.schema.json
src/indream/: __init__.py  async_client.py  client.py  editor_state_validator.py  errors.py  types.py  webhooks.py
src/indream/resources/: assets.py  editor.py  exports.py  illustrations.py  projects.py  uploads.py
tests/: __init__.py  helpers.py  test_async_exports.py  test_editor_validate.py  test_errors.py  test_exports_create.py  test_exports_list.py  test_illustrations.py  test_projects.py  test_retries.py  test_uploads_assets.py  test_wait.py  test_webhook_payload.py  test_webhook_signature.py
